# feature-analytics-core

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py
adapters/generic_parquet_adapter/: README.md
adapters/two_tower_adapter/: COMPATIBILITY.md  README.md  __init__.py  scoring.py
analytics_core/: __init__.py  encoding.py
analytics_core/candidates/: __init__.py  cross_candidates.py
analytics_core/importance/: __init__.py  permutation_importance.py
analytics_core/interactions/: __init__.py  interaction_mining.py
analytics_core/io/: __init__.py  contracts.py
analytics_core/ops/: data_quality.py  run_metadata.py
analytics_core/residuals/: __init__.py  residual_dataset.py  residual_model.py
configs/: analytics.yaml  feature_groups.yaml
contracts/: feature_catalog.schema.json  model_manifest.schema.json  prediction_dump.schema.json
notebooks/: phase1_results_review.ipynb
pipelines/: build_prediction_dump.py  run_mvp.py  validate_contracts.py
tests/: README.md  test_cross_candidates.py
