[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-analytics-core"
version = "0.1.0"
description = "Contract-first offline feature analytics pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "shap>=0.45",
  "pyyaml>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics_core*", "adapters*", "pipelines*"]

